chore: improvements to `auximage` tool
Signed-off-by: Sam Gammon <sam@elide.ventures>